# retrieval-agent

./: .gitignore  README.md  pyproject.toml
agent/: budget.py  eval.py  planner.py
agent/tools/: calculator.py  code_runner.py  doc_qa.py  kb_lookup.py  web_search.py
data/eval/: agent_eval_results.json  fiqa_queries.jsonl  nfcorpus_queries.jsonl  retrieval_results.json  scifact_queries.jsonl
retrieval/: api.py  eval.py  ingest.py  search.py
scripts/: download_corpus.py
shared/: config.py  embedder.py
