[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval-agent"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "torch>=2.2.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "pypdf>=4.2.0",
    "pandas>=2.2.0",
    "sympy>=1.12",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.1.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "retrieval*", "agent*"]
exclude = ["data*", "scripts*"]